# Opencode_Rs

./: .env.example  .env.minio  .env.production  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  MEMORY.md  README.md  build_output.txt  check-braces.ps1  docker-compose.minio.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  job-output.txt  package-lock.json  package.json  plan.md  poc_test.db-shm  poc_test.db-wal  poc_test.db.backup.pre_canary_20260530_203644  run_backend.bat  server-log.txt  server-out.txt  sse2.txt  start-server.bat  start.bat  test-auth.txt  test_e2e_final.bat  tsconfig.json
.github/: copilot-instructions.md
benches/: perf_test.rs
config/: development.toml  minio.toml  production.toml
deploy/: docker-compose.monitoring.yml  docker-compose.prod.yml
docs/: API_MAPPING.md  API_TUI_SPECIFICATION.md  INDEX.md  MEMORY.md  MODULE_STRUCTURE.md  OPENCODE_UI_IMPROVEMENT_PLAN.md  PERFORMANCE_PROFILING.md  PROTOCOL_MAPPING.md  ProjectMemory.json  TUI_USER_GUIDE.md  ZED_UI_ARCHITECTURE_ANALYSIS.md  ZED_UI_QUICK_REFERENCE.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml
migrations/: 001_create_users_table.sql  002_create_files_table.sql  003_performance_indexes.sql  004_file_metadata.sql  005_s3_file_metadata.sql
monitoring/: alertmanager.yml  prometheus-rules.yml  prometheus.yml
opencode-core/: Cargo.toml
opencode-core/src/: auth.rs  config.rs  lib.rs  models.rs  server.rs
opencode-core/src/api/: browser.rs  config.rs  events.rs  find.rs  health.rs  mod.rs  permission.rs  prompt.rs  provider.rs  question.rs  router.rs  session.rs  static_files.rs  tools.rs
opencode-core/src/browser/: accessibility.rs  error.rs  mod.rs  session.rs  tools.rs  types.rs
opencode-desktop/: Cargo.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
opencode-desktop/frontend/: index.html
opencode-desktop/frontend/assets/: LROKH5N7-r-w1NcZW.js  __vite-browser-external-2447137e-tq5DmEsi.js  abap-Bnd75Cmf.js  actionscript-3-DZEzQt1a.js  ada-DAms6GyV.js  alert-01-C7-RHF4f.js  alert-02-DjIkflEn.js  alert-03-C74uMoSN.js  alert-04-htebxoYk.js  alert-05-BIIbpZDU.js  alert-06-bFU-9ZR0.js  alert-07-BDUE7nXy.js  alert-08-6lx2DATQ.js  alert-09-BUuHam4g.js  alert-10-BOCysA2P.js  amoled-AW7flsBk.js  andromeeda-CgNb3JJZ.js  angular-html-CWMiIidA.js  angular-ts-rN-vcy3V.js  apache-Dv8aT_qI.js  apex-B91a3Ju3.js  apl-BA0U231k.js  applescript-DMSmpHYu.js  ar-ChddgtjE.js  ara-Cd78MTux.js  asciidoc-1Z_6gxVt.js  asm-D1mZb7sN.js  astro-BE5iU2k9.js  aura-DD4sGEKo.js  aurora-x-4xki3lrz.js  awk-BbQAQk_I.js  ayu-YrAbR6fP.js  ayu-dark-C_-R9cIS.js  ayu-light-SIbYZYum.js  ayu-mirage-DNYTkYAe.js  ballerina-V24W2dGI.js  bat-CMr0eOUU.js  beancount-CjfM6pwb.js  berry-Q88fZmL1.js  bibtex-h3RGD0ti.js  (+389 more)
opencode-desktop/src/: App.tsx  index.css  main.rs  main.tsx
opencode-desktop/src/components/: ChatContainer.css  ChatContainer.tsx  Composer.css  Composer.tsx  ErrorToast.css  ErrorToast.tsx  FileList.tsx  FileManager.tsx  FileUploadPanel.tsx  LoginPanel.tsx  Sidebar.css  Sidebar.tsx  StatusBar.tsx  TypingIndicator.css  TypingIndicator.tsx
opencode-desktop/src/services/: api.ts  backend-api.ts  useMessages.ts
opencode-desktop/src/store/: app.ts
opencode-desktop/src/styles/: FileList.css  FileUpload.css  LoginPanel.css  app.css  global.css  theme.css
opencode-desktop/src/types/: index.ts
opencode-electron/: .env.example  .gitignore  IMPLEMENTATION_SPEC.md  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
opencode-flutter/: .flutter-plugins  .flutter-plugins-dependencies  README.md  (+1 more)
opencode-llm/: Cargo.toml
opencode-llm/src/: auth.rs  cache.rs  config.rs  conversation.rs  error.rs  events.rs  git_context.rs  lib.rs  lsp.rs  oauth.rs  permissions.rs  plugin.rs  pricing.rs  registry.rs  session.rs  sse.rs  tools.rs  types.rs
opencode-llm/src/mcp/: bridge.rs  jsonrpc.rs  manager.rs  mod.rs  stdio.rs
opencode-llm/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
opencode-llm/src/tools/: bash.rs  edit_file.rs  glob_search.rs  grep_search.rs  read_file.rs  web_fetch.rs  web_search.rs  write_file.rs
(+342 files in other folders)
