[workspace]
resolver = "2"
members = [
    "opencode-core",
]
exclude = [
    "opencode-desktop",
]

[package]
name = "opencode_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.5"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"

# Security
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
mime_guess = "2.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Multipart
actix-multipart = "0.4"
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
log = "0.4"

# CORS & Rate Limiting
actix-cors = "0.7"
governor = "0.6"

# Configuration Management
config = "0.14"
dotenvy = "0.15"
dotenv = "0.15"
tempfile = "3.8"

# Redis (Wave 4)
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
tokio-util = "0.7"

# Metrics & Monitoring
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.19"

# AWS S3 / MinIO (Wave 3)
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }
aws-smithy-types = "1.0"

# Async Traits
async-trait = "0.1"

[lib]
name = "opencode_poc"
path = "src/lib.rs"

[[bin]]
name = "opencode_poc"
path = "src/main.rs"


[dev-dependencies]
actix-rt = "2.9"
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde_json = "1.0"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
