[package]
name = "opencode-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opencode-server"
path = "src/bin/server.rs"

[dependencies]
actix-web = "4.5"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
futures = "0.3"
bytes = "1.5"
async-trait = "0.1"
parking_lot = "0.12"

