[package]
name = "opencode-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

[dependencies]
opencode-core = { path = "../opencode-core" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
log = "0.4"
anyhow = "1.0"
tauri = { version = "2", features = ["devtools"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
