[package]
name = "opencode-llm"
version = "0.1.0"
edition = "2021"
description = "LLM client library for OpenCode_Rs (Anthropic + OpenAI-compatible providers, SSE streaming, tool runtime)"

[dependencies]
# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Async runtime
tokio = { version = "1.35", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
glob = "0.3"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Util
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
async-stream = "0.3"
dirs-next = "2.0"

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"
